--- a/sass/_ui.sass
+++ b/sass/_ui.sass
@@ -230,7 +230,11 @@
 	background: #fff
 	tbody
 		td:hover
-			background: #fafafa 
+			background: #fafafa
+		td
+			text-align: center
+			a
+				text-align: center
 	a
 		color: #44AFA1
 		+semi
@@ -250,6 +254,7 @@
 		color: #44AFA1 
 		font-size: 20px 
 		text-align: left
+		top: 3px 
 	.ui-datepicker-next
 		@extend .icon-arrright
 		text-align: right
